# class-collaboration

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLOUDFLARE_DEPLOYMENT.md  GITHUB_PUSH_GUIDE.md  VISUAL_PUSH_GUIDE.md  check-before-push.sh  package.json  pnpm-lock.yaml  render.yaml  session-data.json
.github/: copilot-instructions.md
apps/backend/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  run_migration.sh
apps/backend/migrations/: 20241201150000_recreate_student_tables.sql  20241201160000_fix_allow_questions_default.sql  20241201170000_add_indexes_and_upvote_tracking.sql  20260120120000_add_more_perf_indexes.sql
apps/backend/src/: config.rs  db.rs  error.rs  main.rs
apps/backend/src/handlers/: ably.rs  auth.rs  health.rs  live.rs  mod.rs  public.rs  session.rs  slide.rs  stats.rs  student.rs
apps/backend/src/middleware/: auth.rs
apps/backend/src/models/: mod.rs  response.rs  session.rs  slide.rs  student.rs  user.rs
apps/backend/src/repositories/: mod.rs  session.rs  sqlx_session.rs
apps/backend/src/services/: ably.rs  mod.rs  session.rs
apps/web/: .env.example  empty.js  next.config.ts  package.json  vitest.config.ts
apps/web/e2e/: auth.spec.ts  session.spec.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/components/: connection-status.tsx  qa-manager.tsx  session-dashboard.tsx  slide-editor-panel.tsx  slide-renderer.tsx  slide-type-selector.tsx
apps/web/src/lib/: api.ts  utils.test.ts  websocket.test.ts  websocket.tsx
loadtest/: package-lock.json
(+20 files in other folders)
