[package]
name = "backend-rust"
version = "0.1.0"
edition = "2021"
default-run = "backend-rust"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-rustls", "macros", "chrono", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
jsonwebtoken = "9.2"
bcrypt = "0.15"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
rand = "0.8"
anyhow = "1.0.100"
axum-extra = { version = "0.9", features = ["cookie"] }
hmac = "0.12.1"
sha2 = "0.10.9"
base64 = "0.22.1"
reqwest = { version = "0.11", features = ["json"] }
urlencoding = "2.1"
tower = "0.4"
governor = "0.6"
tower_governor = "0.4"
once_cell = "1.19"
async-trait = "0.1"
